{Harshit}Refactor code of customer details for z-index issue

--- a/src/components/orderSummery/OrderSummery.scss
+++ b/src/components/orderSummery/OrderSummery.scss
@@ -66,8 +66,8 @@
 .total-price{
     display: flex;
     text-align: center;
-    font: normal normal bold 14px/17px Lato;
-    font-size: large;
+    font: normal normal bold 17px/20px Lato;
+    font-size:x-large;
     color: #0A0102;
     text-align: center;
     margin-left: 40%;
